--- a/perfil/index.html
+++ b/perfil/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SmoakBook</title>
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
-    </head>
-    <body>
-        <div class="header">
-            <div class="retangGreen">
-                <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
-                <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
-            </div>
-            <div class="retangOrange"></div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SmoakBook</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
+</head>
+
+<body>
+    <div class="header">
+        <div class="retangGreen">
+            <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
+            <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
+        </div>
+        <div class="retangOrange"></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -39,7 +44,8 @@
                     <a href="/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a>
                 </li>
                 <li>
-                    <a href="/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a>
+                    <a href="/notificacoes/"><span
+                            class="material-symbols-outlined">notifications</span>Notificações</a>
                 </li>
                 <li>
                     <a href="/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a>
@@ -52,92 +58,73 @@
                 </li>
             </ul>
         </nav>
-        </div>
-        <div class="content-wrapper">
-            <main>
-                <h1 class="perfil">Perfil</h1>
-                <div class="parent-container">
-                    <div class="p-i-container">
-                        <div class="profile-container">
-                            <div class="img-container">
-                                <img src="/Icons TCC/perfil.jpg" alt="Foto de perfil">
-                            </div>
-                        </div>
-                        <div class="input-container">
-                            <div class="input-group">
-                                <p class="text-input">RM:</p>
-                                <input type="number" class="input-field input-rm" disabled>
-                            </div>
-                            <div class="input-group">
-                                <p class="text-input">Nome social:</p>
-                                <input type="text" class="input-field" disabled>
-                            </div>
-                            <div class="input-group">
-                                <p class="text-input">Nome completo:</p>
-                                <input type="text" class="input-field" disabled>
-                            </div>
-                            <div class="input-group">
-                                <text class="text-input">E-mail:</text>
-                                <input type="email" class="input-field" disabled>
-                            </div>
-                            <form class="sexo-form">
-                                <legend>Sexo:</legend>
-                                <label>
-                                    <input 
-                                        type="radio" 
-                                        name="opcao" 
-                                        value="feminino" 
-                                        disabled
-                                    >
-                                        Feminino
-                                </label>
-                                <label>
-                                    <input 
-                                        type="radio" 
-                                        name="opcao" 
-                                        value="masculino" 
-                                        disabled
-                                    >
-                                        Masculino
-                                </label>
-                                <label>
-                                    <input 
-                                        type="radio" 
-                                        name="opcao" 
-                                        value="neutro" 
-                                        disabled
-                                    >
-                                        Neutro
-                                </label>
-                                <label>
-                                    <input 
-                                        type="radio" 
-                                        name="opcao" 
-                                        value="padrao" 
-                                        disabled
-                                    >
-                                        Padrão
-                                </label>
-                            </form>
+    </div>
+    <div class="content-wrapper">
+        <main>
+            <h1 class="perfil">Perfil</h1>
+            <div class="parent-container">
+                <div class="p-i-container">
+                    <div class="profile-container">
+                        <div class="img-container">
+                            <img src="/Icons TCC/perfil.jpg" alt="Foto de perfil">
                         </div>
                     </div>
+                    <div class="input-container">
+                        <div class="input-group">
+                            <p class="text-input">RM:</p>
+                            <input type="number" class="input-field input-rm" disabled>
+                        </div>
+                        <div class="input-group">
+                            <p class="text-input">Nome social:</p>
+                            <input type="text" class="input-field" disabled>
+                        </div>
+                        <div class="input-group">
+                            <p class="text-input">Nome completo:</p>
+                            <input type="text" class="input-field" disabled>
+                        </div>
+                        <div class="input-group">
+                            <text class="text-input">E-mail:</text>
+                            <input type="email" class="input-field" disabled>
+                        </div>
+                        <form class="sexo-form">
+                            <legend>Sexo:</legend>
+                            <label>
+                                <input type="radio" name="opcao" value="feminino" disabled>
+                                Feminino
+                            </label>
+                            <label>
+                                <input type="radio" name="opcao" value="masculino" disabled>
+                                Masculino
+                            </label>
+                            <label>
+                                <input type="radio" name="opcao" value="neutro" disabled>
+                                Neutro
+                            </label>
+                            <label>
+                                <input type="radio" name="opcao" value="padrao" disabled>
+                                Padrão
+                            </label>
+                        </form>
+                    </div>
                 </div>
-                <div class="redefinir">
-                    <a href="/esqueceuSenha1/">Esqueceu a senha?</a>
-                </div>
-                <div class="editar">
-                    <a href="/perfilEditar/">
-                        <button type="submit" class="cadastro-button">
-                            <img src="/imagens_telas/editar_perfil.png">
-                        </button>
-                    </a>
-                </div>
-            </main>
-        </div>
-        <footer>
-            <div>
-                Desenvolvido por <a href="/sobreNos/">Danikawari</a>
             </div>
-        </footer>
-    </body>
+            <div class="redefinir">
+                <a href="/esqueceuSenha1/">Esqueceu a senha?</a>
+            </div>
+            <div class="editar">
+                <a href="/perfilEditar/">
+                    <button type="submit" class="cadastro-button">
+                        <img src="/imagens_telas/editar_perfil.png">
+                    </button>
+                </a>
+            </div>
+        </main>
+    </div>
+    <footer>
+        <div>
+            Desenvolvido por <a href="/sobreNos/">Danikawari</a>
+        </div>
+    </footer>
+</body>
+
 </html>
